# slime_simulation_rust

./: .gitignore  Cargo.toml  LICENSE  readme.md
src/: main.rs  simulation.rs  system.rs
