[package]
name = "slime_simulation"
version = "0.1.0"
authors = ["Wybe Westra <wybe@ruurdwestra.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.20.*"
vulkano-shaders = "0.20.*"
vulkano-win = "0.20.*"
winit = "0.24.*"
imgui = "0.7.*"
imgui-winit-support = "0.7.*"
imgui-vulkano-renderer = "0.7.*"
image = "0.23.14"